# alteryx-server-api

./: pyproject.toml
alteryx_server_api/: __init__.py  alteryx_gallery_api_v3_compatible.py
