[tool.poetry]
description = """\
    Python interface for the Alteryx Server API. \
    Based on https://github.com/Theamazingdp/AlteryxGalleryAPI\
    """
name = "alteryx-server-api"
version = "0.1.0"
license = "MIT"
authors = ["Vincent Ging Ho Yim <cenviity@gmail.com>"]
readme = "README.md"
repository = "https://github.com/cenviity/alteryx-server-api"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
